Fix horizontal scrollbars
100vw doesn't include scrollbar width

--- a/app/styles/featured.less
+++ b/app/styles/featured.less
@@ -6,23 +6,23 @@
 .Featured-container {
   display: flex;
   flex-wrap: wrap;
-  width: 100vw;
+  width: 100%;
 }
 
 .Featured {
   margin: 0;
   position: relative;
   text-align: center;
-  width: 100vw;
+  width: 100%;
   height: 100vw;
 
   @media @tablet {
-    width: calc(100vw / 2);
+    width: calc(100% / 2);
     height: calc(100vw / 2);
   }
 
   @media @desktop {
-    width: calc(100vw / 3);
+    width: calc(100% / 3);
     height: calc(100vw / 3);
   }
 }
